examples/failing/LeadingZeros2.purs
module Main where

import Prelude

x = 00.1
